feat: Add user settings (#116)
Fixes #50
